Closed
Bug 591408
Opened 15 years ago
Closed 15 years ago
Exiting full screen mode changes icons to small mode and still thinks full screen mode is active
Categories
(Core :: Widget: Win32, defect)
Core
Widget: Win32
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: domthedude001, Assigned: jimm)
References
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
|
28.72 KB,
image/png
|
Details | |
|
1.55 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
|
1.25 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:2.0b5pre) Gecko/20100827 Minefield/4.0b5pre
Build Identifier: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:2.0b5pre) Gecko/20100827 Minefield/4.0b5pre
Exiting full screen mode changes icons to small mode and still thinks full screen mode is active
Reproducible: Always
Steps to Reproduce:
1. Go into full screen mode (F11)
2. Exit full screen mode (F11)
3. Right click on the "Reload" button
Actual Results:
The menu says "Exit full screen mode" (even though I am no longer in fulls screen mode), and the large icons have switched to small icons, despite what is set in about:config.
Updated•15 years ago
|
Blocks: 575195
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Version: unspecified → Trunk
Hitting "Exit Full Screen Mode" actually takes you into full screen and going back into normal mode, from there, has the same problem.
The only way to fix it is by restarting the browser.
Comment 4•15 years ago
|
||
Is this Windows-only? Seems to work for me on Linux with today's nightly.
Comment 5•15 years ago
|
||
No problem on linux.
Mozilla/5.0 (X11; Linux i686; rv:2.0b5pre) Gecko/20100827 Minefield/4.0b5pre
Comment 6•15 years ago
|
||
I can reproduce on XP.
So I guess this was caused by the widget part of bug 575195, or the appshell part exposed a widget bug or something.
Component: General → Widget: Win32
Product: Firefox → Core
QA Contact: general → win32
| Assignee | ||
Comment 7•15 years ago
|
||
We might get multiple fullscreen events, one before we enter, and one after we enter the mode. This fixes the context menu, but there might be other saved "things" here I need to address.
Assignee: nobody → jmathies
Comment 8•15 years ago
|
||
(In reply to comment #7)
> We might get multiple fullscreen events
This doesn't sound right.
| Assignee | ||
Comment 9•15 years ago
|
||
(In reply to comment #8)
> (In reply to comment #7)
> > We might get multiple fullscreen events
>
> This doesn't sound right.
actually looking at widget that doesn't appear to be the case. although clearly showXULChrome is getting called twice.
Comment 10•15 years ago
|
||
(In reply to comment #9)
> actually looking at widget that doesn't appear to be the case. although clearly
> showXULChrome is getting called twice.
It is, and it's kind of bogus too, but this doesn't explain the platform-specific nature of this bug or why it regressed recently:
http://mxr.mozilla.org/mozilla-central/source/browser/base/content/browser.js#3645
| Assignee | ||
Comment 11•15 years ago
|
||
Well, toggle gets called twice with enterFS=true, once before we enter it and once after. It's only called once when exiting.
| Assignee | ||
Comment 12•15 years ago
|
||
So when we go into fullscreen from F11, nsGlobalWindow's SetFullScreen gets called. That fires a dom event to browser.js. Then SetFullScreen calls Makefullscreen on the widget, witch fires a size mode event. That in turn wraps around and enters nsGlobalWindow's SetFullScreen again, triggering a second dom event.
| Assignee | ||
Comment 13•15 years ago
|
||
Attachment #469971 -
Attachment is obsolete: true
| Assignee | ||
Comment 14•15 years ago
|
||
Comment on attachment 469994 [details] [diff] [review]
patch
bz, this addresses what's happening in comment 12.
The changes in bug 575195 have widget sending a size mode event when it enters full screen in MakeFullScreen. That ends up back in here and triggers a second dom event, which content doesn't expect. This just filters that second event out if the global window state indicates it is already in full screen mode.
This is currently win specific, although there are open bugs on implementing the same widget behavior on other platforms.
This should also block the latest beta, since the browser ui can get out of sync with the current full screen state.
Attachment #469994 -
Flags: review?(bzbarsky)
Attachment #469994 -
Flags: approval2.0?
Comment 15•15 years ago
|
||
Comment on attachment 469994 [details] [diff] [review]
patch
r=bzbarsky
Attachment #469994 -
Flags: review?(bzbarsky) → review+
Updated•15 years ago
|
blocking2.0: ? → final+
| Assignee | ||
Updated•15 years ago
|
Attachment #469994 -
Flags: approval2.0?
| Assignee | ||
Comment 16•15 years ago
|
||
| Assignee | ||
Comment 17•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 18•15 years ago
|
||
You guys are awesome.
You need to log in
before you can comment on or make changes to this bug.
Description
•