Bug 591408 - Fix for full screen regression: Only send one dom event to content. r=bz a=blocking